prod/gitlab/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-unicorn-ingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: gitlab.sdpaks.equinor.com
    http:
      paths:
      - backend:
          serviceName: gitlab-unicorn
          servicePort: 8181
        path: /
      - backend:
          serviceName: gitlab-unicorn
          servicePort: 8080
        path: /admin/sidekiq
  tls:
  - hosts:
    - gitlab.sdpaks.equinor.com
    secretName: gitlab-unicorn-tls
    
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-sdp-ingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: git.equinor.com
    http:
      paths:
      - backend:
          serviceName: gitlab-unicorn
          servicePort: 8181
        path: /
      - backend:
          serviceName: gitlab-unicorn
          servicePort: 8080
        path: /admin/sidekiq
  tls:
  - hosts:
    - git.equinor.com
    secretName: gitlab-sdp-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry-ingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: registry.sdpaks.equinor.com
    http:
      paths:
      - backend:
          serviceName: gitlab-registry
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - registry.sdpaks.equinor.com
    secretName: gitlab-registry-tls
